# ss_generation-

./: .gitignore  compose.yaml
backend/: .dockerignore  dockerfile  main.py  pyproject.toml
backend/app/controller/: extraction.py
backend/app/core/: config.py  extraction.py  storage.py
backend/app/models/: base.py  image.py  upload_session.py
backend/app/router/: extraction.py
backend/app/schemas/: extraction.py  upload_session.py
frontend/: .dockerignore  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: ExtractForm.tsx  ExtractPreview.tsx
frontend/lib/: api.ts
