[project]
name = "backend"
version = "0.1.0"
description = "Video to annotated crop extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "av>=15.1.0",
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pillow>=11.0.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "uvicorn>=0.46.0",
]
